--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": "^7.2.5",
         "barryvdh/laravel-dompdf": "^0.8.6",
         "barryvdh/laravel-snappy": "^0.4.8",
+        "carlos-meneses/laravel-mpdf": "^2.1",
         "doctrine/dbal": "^2.11",
         "gghughunishvili/entrust": "^3.0",
         "guzzlehttp/guzzle": "7.2.0",
@@ -18,14 +19,14 @@
         "laravelcollective/html": "^6.1.2",
         "lavela/phpjasper": "^3.0",
         "maatwebsite/excel": "^3.1",
+        "milon/barcode": "^7.0",
         "niklasravnsborg/laravel-pdf": "^4.0",
         "nwidart/laravel-modules": "7.3.0",
         "owen-it/laravel-auditing": "11.0.0",
         "phpoffice/phpexcel": "^1.8",
         "predis/predis": "1.1.6",
         "rap2hpoutre/laravel-log-viewer": "1.7.0",
-        "wildside/userstamps": "2.1.0",
-        "milon/barcode": "^7.0"
+        "wildside/userstamps": "2.1.0"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.8",
